# JACT

./: .gitmodules  CMakeLists.txt
.github/workflows/: cmake.yml
src/: CMakeLists.txt
src/ksolver/: CMakeLists.txt  expression.hpp  number.hpp  operator.hpp  operators.hpp  property.hpp  solver.hpp
src/ksolver/expressions/: constant.hpp  operator.cpp  operator.hpp  variable.hpp
src/ksolver/operators/: addition.cpp  addition.hpp
src/main/: main.cpp
test/: CMakeLists.txt
test/hello_test/: CMakeLists.txt
